Fix title spacing on production
It appears the classes are added in different order causing another rule 
to overide this one. Making this more specific should help solve this.

--- a/src/Info.css
+++ b/src/Info.css
@@ -1,4 +1,4 @@
-.tabs {
+.container .tabs {
   margin-top: 15px;
 }
 
